Add standby task assignment to Streams membership manager