@@ -16,10 +16,8 @@
  */
 package org.apache.kafka.clients.consumer.internals;
 
-import org.apache.kafka.clients.consumer.internals.events.BackgroundEvent;
 import org.apache.kafka.clients.consumer.internals.events.StreamsOnAllTasksLostCallbackCompletedEvent;
 import org.apache.kafka.clients.consumer.internals.events.StreamsOnTasksAssignedCallbackCompletedEvent;
-import org.apache.kafka.clients.consumer.internals.events.StreamsOnTasksAssignedCallbackNeededEvent;
 import org.apache.kafka.common.KafkaException;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.message.StreamsGroupHeartbeatResponseData;
@@ -39,10 +37,8 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
-import java.util.Queue;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
@@ -57,6 +53,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -86,8 +83,6 @@ public class StreamsMembershipManagerTest {
 
     @Mock
     private StreamsAssignmentInterface streamsAssignmentInterface;
-
-    private Queue<BackgroundEvent> backgroundEventQueue = new LinkedList<>();
 
     @BeforeEach
     public void setup() {
@@ -125,8 +120,24 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testActiveTasksAreNullInHeartbeatResponse() {
+        testTasksAreNullInHeartbeatResponse(null, Collections.emptyList(), Collections.emptyList());
+    }
+
+    @Test
+    public void testStandbyTasksAreNullInHeartbeatResponse() {
+        testTasksAreNullInHeartbeatResponse(Collections.emptyList(), null, Collections.emptyList());
+    }
+
+    @Test
+    public void testWarmupTasksAreNullInHeartbeatResponse() {
+        testTasksAreNullInHeartbeatResponse(Collections.emptyList(), Collections.emptyList(), null);
+    }
+
+    private void testTasksAreNullInHeartbeatResponse(final List<StreamsGroupHeartbeatResponseData.TaskIds> activeTasks,
+                                                     final List<StreamsGroupHeartbeatResponseData.TaskIds> standbyTasks,
+                                                     final List<StreamsGroupHeartbeatResponseData.TaskIds> warmupTasks) {
         joining();
-        final StreamsGroupHeartbeatResponse response = makeHeartbeatResponse(null);
+        final StreamsGroupHeartbeatResponse response = makeHeartbeatResponse(activeTasks, standbyTasks, warmupTasks);
 
         final IllegalStateException exception = assertThrows(
             IllegalStateException.class,
@@ -153,11 +164,11 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
         final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecuted);
         joining();
 
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
 
         final Collection<TopicPartition> expectedPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
         verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionsToAssign, expectedPartitionsToAssign);
@@ -181,20 +192,20 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
         );
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         when(streamsAssignmentInterface.requestOnTasksRevokedCallbackInvocation(activeTasksSetup))
             .thenReturn(onTasksRevokedCallbackExecuted);
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecuted);
         when(subscriptionState.assignedPartitions())
             .thenReturn(Collections.emptySet())
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
 
         final Set<TopicPartition> expectedPartitionsToRevoke = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
         final Collection<TopicPartition> expectedPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_1));
@@ -221,18 +232,18 @@ public class StreamsMembershipManagerTest {
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0),
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
         );
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecuted);
         when(subscriptionState.assignedPartitions())
             .thenReturn(Collections.emptySet())
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
 
         final Collection<TopicPartition> expectedPartitionAssignment = Set.of(
             new TopicPartition(TOPIC_0, PARTITION_0),
@@ -264,20 +275,20 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
         );
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         when(streamsAssignmentInterface.requestOnTasksRevokedCallbackInvocation(activeTasksToRevoke))
             .thenReturn(onTasksRevokedCallbackExecuted);
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecuted);
         when(subscriptionState.assignedPartitions())
             .thenReturn(Collections.emptySet())
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0), new TopicPartition(TOPIC_0, PARTITION_1)));
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
 
         final Set<TopicPartition> expectedPartitionsToRevoke = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
         final Collection<TopicPartition> expectedPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_1));
@@ -304,8 +315,11 @@ public class StreamsMembershipManagerTest {
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_1, PARTITION_0)
         );
         final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
-            .thenReturn(onTasksAssignedCallbackExecuted);
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(activeTasks, Collections.emptySet())
+            )
+        ).thenReturn(onTasksAssignedCallbackExecuted);
         joining();
 
         reconcile(makeHeartbeatResponse(
@@ -327,16 +341,232 @@ public class StreamsMembershipManagerTest {
     }
 
     @Test
+    public void testReconcilingEmptyToSingleStandbyTask() {
+        final Set<StreamsAssignmentInterface.TaskId> standbyTasks =
+            Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(Collections.emptySet(), standbyTasks)
+            )
+        ).thenReturn(onTasksAssignedCallbackExecuted);
+        joining();
+
+        reconcile(makeHeartbeatResponseWithStandbyTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+
+        verify(subscriptionState).assignFromSubscribedAwaitingCallback(Collections.emptySet(), Collections.emptySet());
+        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(any());
+        verifyInStateReconciling(membershipManager);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState).enablePartitionsAwaitingCallback(Collections.emptySet());
+        verifyInStateAcknowledging(membershipManager);
+        verify(streamsAssignmentInterface, never()).requestOnTasksRevokedCallbackInvocation(any());
+        verify(subscriptionState, never()).markPendingRevocation(any());
+    }
+
+    @Test
+    public void testReconcilingStandbyTaskToDifferentStandbyTask() {
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> standbyTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        final Set<StreamsAssignmentInterface.TaskId> standbyTasks = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
+        );
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(Collections.emptySet(), standbyTasksSetup)
+            )
+        ).thenReturn(onTasksAssignedCallbackExecutedSetup);
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(Collections.emptySet(), standbyTasks)
+            )
+        ).thenReturn(onTasksAssignedCallbackExecuted);
+        joining();
+        reconcile(makeHeartbeatResponseWithStandbyTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
+
+        reconcile(makeHeartbeatResponseWithStandbyTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
+
+        verify(subscriptionState, times(2)).assignFromSubscribedAwaitingCallback(Collections.emptySet(), Collections.emptySet());
+        verify(subscriptionState).enablePartitionsAwaitingCallback(Collections.emptySet());
+        verifyInStateReconciling(membershipManager);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState, times(2)).enablePartitionsAwaitingCallback(Collections.emptySet());
+        verifyInStateAcknowledging(membershipManager);
+        verify(streamsAssignmentInterface, never()).requestOnTasksRevokedCallbackInvocation(any());
+        verify(subscriptionState, never()).markPendingRevocation(any());
+    }
+
+    @Test
+    public void testReconcilingSingleStandbyTaskToAdditionalStandbyTask() {
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> standbyTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        final Set<StreamsAssignmentInterface.TaskId> standbyTasks = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0),
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
+        );
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(Collections.emptySet(), standbyTasksSetup)
+            )
+        ).thenReturn(onTasksAssignedCallbackExecutedSetup);
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(Collections.emptySet(), standbyTasks)
+            )
+        ).thenReturn(onTasksAssignedCallbackExecuted);
+        joining();
+        reconcile(makeHeartbeatResponseWithStandbyTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
+
+        reconcile(makeHeartbeatResponseWithStandbyTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
+
+        verify(subscriptionState, times(2)).assignFromSubscribedAwaitingCallback(Collections.emptySet(), Collections.emptySet());
+        verify(subscriptionState).enablePartitionsAwaitingCallback(Collections.emptySet());
+        verifyInStateReconciling(membershipManager);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState, times(2)).enablePartitionsAwaitingCallback(Collections.emptySet());
+        verifyInStateAcknowledging(membershipManager);
+        verify(streamsAssignmentInterface, never()).requestOnTasksRevokedCallbackInvocation(any());
+        verify(subscriptionState, never()).markPendingRevocation(any());
+    }
+
+    @Test
+    public void testReconcilingMultipleStandbyTaskToSingleStandbyTask() {
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> standbyTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0),
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
+        );
+        final Set<StreamsAssignmentInterface.TaskId> standbyTasks = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
+        );
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(Collections.emptySet(), standbyTasksSetup)
+            )
+        ).thenReturn(onTasksAssignedCallbackExecutedSetup);
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(Collections.emptySet(), standbyTasks)
+            )
+        ).thenReturn(onTasksAssignedCallbackExecuted);
+        joining();
+        reconcile(makeHeartbeatResponseWithStandbyTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
+
+        reconcile(makeHeartbeatResponseWithStandbyTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
+
+        verify(subscriptionState, times(2)).assignFromSubscribedAwaitingCallback(Collections.emptySet(), Collections.emptySet());
+        verify(subscriptionState).enablePartitionsAwaitingCallback(Collections.emptySet());
+        verifyInStateReconciling(membershipManager);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState, times(2)).enablePartitionsAwaitingCallback(Collections.emptySet());
+        verifyInStateAcknowledging(membershipManager);
+        verify(streamsAssignmentInterface, never()).requestOnTasksRevokedCallbackInvocation(any());
+        verify(subscriptionState, never()).markPendingRevocation(any());
+    }
+
+    @Test
+    public void testReconcilingActiveTaskToStandbyTask() {
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksRevokedCallbackExecuted = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        final Set<StreamsAssignmentInterface.TaskId> standbyTasks = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(activeTasksSetup, Collections.emptySet())
+            )
+        ).thenReturn(onTasksAssignedCallbackExecutedSetup);
+        when(streamsAssignmentInterface.requestOnTasksRevokedCallbackInvocation(activeTasksSetup))
+            .thenReturn(onTasksRevokedCallbackExecuted);
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+            makeTaskAssignment(Collections.emptySet(), standbyTasks))
+        ).thenReturn(onTasksAssignedCallbackExecuted);
+        when(subscriptionState.assignedPartitions())
+            .thenReturn(Collections.emptySet())
+            .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)))
+            .thenReturn(Collections.emptySet());
+        joining();
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
+
+        reconcile(makeHeartbeatResponseWithStandbyTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+
+        final Set<TopicPartition> expectedPartitionsToRevoke = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
+        verify(subscriptionState).markPendingRevocation(expectedPartitionsToRevoke);
+        onTasksRevokedCallbackExecuted.complete(null);
+        verify(subscriptionState).assignFromSubscribedAwaitingCallback(Collections.emptySet(), Collections.emptySet());
+        verifyInStateReconciling(membershipManager);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState).enablePartitionsAwaitingCallback(Collections.emptySet());
+        verifyInStateAcknowledging(membershipManager);
+    }
+
+    @Test
+    public void testReconcilingStandbyTaskToActiveTask() {
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> standbyTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(Collections.emptySet(), standbyTasksSetup)
+            )
+        ).thenReturn(onTasksAssignedCallbackExecutedSetup);
+        when(
+            streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(
+                makeTaskAssignment(activeTasks, Collections.emptySet())
+            )
+        ).thenReturn(onTasksAssignedCallbackExecuted);
+        when(subscriptionState.assignedPartitions())
+            .thenReturn(Collections.emptySet())
+            .thenReturn(Collections.emptySet())
+            .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
+        joining();
+        reconcile(makeHeartbeatResponseWithStandbyTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
+
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+
+        verify(subscriptionState).assignFromSubscribedAwaitingCallback(Collections.emptySet(), Collections.emptySet());
+        verifyInStateReconciling(membershipManager);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState).enablePartitionsAwaitingCallback(Collections.emptySet());
+        verifyInStateAcknowledging(membershipManager);
+        verify(streamsAssignmentInterface, never()).requestOnTasksRevokedCallbackInvocation(any());
+        verify(subscriptionState, never()).markPendingRevocation(any());
+    }
+
+    @Test
     public void testReconcilingAndAssignmentCallbackFails() {
         setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
         final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecuted);
         joining();
 
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
 
         final Collection<TopicPartition> expectedPartitionAssignment = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
         verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionAssignment, expectedPartitionAssignment);
@@ -401,13 +631,13 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
         final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         final CompletableFuture<Void> onTasksRevokedCallbackExecuted = new CompletableFuture<>();
         when(streamsAssignmentInterface.requestOnTasksRevokedCallbackInvocation(activeTasks))
             .thenReturn(onTasksRevokedCallbackExecuted);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         final CompletableFuture<Void> onGroupLeft = membershipManager.leaveGroup();
@@ -427,7 +657,7 @@ public class StreamsMembershipManagerTest {
         assertEquals(onGroupLeft, onGroupLeftAfterRevocationCallback);
         membershipManager.onHeartbeatRequestGenerated();
         verifyInStateUnsubscribed(membershipManager);
-        membershipManager.onHeartbeatSuccess(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        membershipManager.onHeartbeatSuccess(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         assertTrue(onGroupLeft.isDone());
         assertFalse(onGroupLeft.isCompletedExceptionally());
     }
@@ -438,10 +668,10 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
         final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         final CompletableFuture<Void> onGroupLeft = membershipManager.leaveGroupOnClose();
@@ -457,7 +687,7 @@ public class StreamsMembershipManagerTest {
         assertFalse(onGroupLeft.isDone());
         membershipManager.onHeartbeatRequestGenerated();
         verifyInStateUnsubscribed(membershipManager);
-        membershipManager.onHeartbeatSuccess(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        membershipManager.onHeartbeatSuccess(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         assertTrue(onGroupLeft.isDone());
         assertFalse(onGroupLeft.isCompletedExceptionally());
     }
@@ -469,13 +699,13 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
         );
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         final CompletableFuture<Void> onAllTasksRevokedCallbackExecuted = new CompletableFuture<>();
         when(streamsAssignmentInterface.requestOnTasksRevokedCallbackInvocation(activeTasksSetup))
             .thenReturn(onAllTasksRevokedCallbackExecuted);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
         CompletableFuture<Void> future = leaving(onAllTasksRevokedCallbackExecuted);
 
@@ -493,10 +723,10 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
         final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         membershipManager.onPollTimerExpired();
@@ -511,10 +741,10 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
         final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         membershipManager.onHeartbeatRequestGenerated();
@@ -528,11 +758,11 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
         final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         membershipManager.onHeartbeatRequestGenerated();
@@ -579,10 +809,10 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
         final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
 
         testOnFencedWhenInJoiningOrReconcilingOrAcknowledgingOrStable();
     }
@@ -593,10 +823,10 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
         final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         testOnFencedWhenInJoiningOrReconcilingOrAcknowledgingOrStable();
@@ -608,10 +838,10 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
         final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
         stable();
 
@@ -709,13 +939,13 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
         );
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
         when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
             .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
 
         testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable(onAllTasksLostCallbackExecuted);
     }
@@ -727,13 +957,13 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
         );
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
         when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
             .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable(onAllTasksLostCallbackExecuted);
@@ -746,13 +976,13 @@ public class StreamsMembershipManagerTest {
         final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
         );
-        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup, Collections.emptySet())))
             .thenReturn(onTasksAssignedCallbackExecutedSetup);
         final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
         when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
             .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
         stable();
 
@@ -935,20 +1165,33 @@ public class StreamsMembershipManagerTest {
         );
     }
 
-    private StreamsGroupHeartbeatResponse makeHeartbeatResponse(final String subtopologyId,
-                                                                final List<Integer> partitions) {
-        return makeHeartbeatResponse(Collections.singletonList(
+    private StreamsGroupHeartbeatResponse makeHeartbeatResponseWithActiveTasks(final String subtopologyId,
+                                                                               final List<Integer> partitions) {
+        return makeHeartbeatResponseWithActiveTasks(List.of(
             new StreamsGroupHeartbeatResponseData.TaskIds()
                 .setSubtopologyId(subtopologyId)
                 .setPartitions(partitions)
         ));
     }
 
+    private StreamsGroupHeartbeatResponse makeHeartbeatResponseWithStandbyTasks(final String subtopologyId,
+                                                                                final List<Integer> partitions) {
+        return makeHeartbeatResponse(
+            Collections.emptyList(),
+            List.of(
+                new StreamsGroupHeartbeatResponseData.TaskIds()
+                    .setSubtopologyId(subtopologyId)
+                    .setPartitions(partitions)
+            ),
+            Collections.emptyList()
+        );
+    }
+
     private StreamsGroupHeartbeatResponse makeHeartbeatResponse(final String subtopologyId0,
                                                                 final List<Integer> partitions0,
                                                                 final String subtopologyId1,
                                                                 final List<Integer> partitions1) {
-        return makeHeartbeatResponse(List.of(
+        return makeHeartbeatResponseWithActiveTasks(List.of(
             new StreamsGroupHeartbeatResponseData.TaskIds()
                 .setSubtopologyId(subtopologyId0)
                 .setPartitions(partitions0),
@@ -958,21 +1201,28 @@ public class StreamsMembershipManagerTest {
         ));
     }
 
-    private StreamsGroupHeartbeatResponse makeHeartbeatResponse(final List<StreamsGroupHeartbeatResponseData.TaskIds> activeTasks) {
+    private StreamsGroupHeartbeatResponse makeHeartbeatResponseWithActiveTasks(final List<StreamsGroupHeartbeatResponseData.TaskIds> activeTasks) {
+        return makeHeartbeatResponse(activeTasks, Collections.emptyList(), Collections.emptyList());
+    }
+
+    private StreamsGroupHeartbeatResponse makeHeartbeatResponse(final List<StreamsGroupHeartbeatResponseData.TaskIds> activeTasks,
+                                                                final List<StreamsGroupHeartbeatResponseData.TaskIds> standbyTasks,
+                                                                final List<StreamsGroupHeartbeatResponseData.TaskIds> warmupTasks) {
         final StreamsGroupHeartbeatResponseData responseData = new StreamsGroupHeartbeatResponseData()
             .setErrorCode(Errors.NONE.code())
             .setMemberId(MEMBER_ID)
             .setMemberEpoch(MEMBER_EPOCH)
             .setActiveTasks(activeTasks)
-            .setStandbyTasks(Collections.emptyList())
-            .setWarmupTasks(Collections.emptyList());
+            .setStandbyTasks(standbyTasks)
+            .setWarmupTasks(warmupTasks);
         return new StreamsGroupHeartbeatResponse(responseData);
     }
 
-    private StreamsAssignmentInterface.Assignment makeTaskAssignment(final Set<StreamsAssignmentInterface.TaskId> activeTasks) {
+    private StreamsAssignmentInterface.Assignment makeTaskAssignment(final Set<StreamsAssignmentInterface.TaskId> activeTasks,
+                                                                     final Set<StreamsAssignmentInterface.TaskId> standbyTasks) {
         return new StreamsAssignmentInterface.Assignment(
             activeTasks,
-            Collections.emptySet(),
+            standbyTasks,
             Collections.emptySet()
         );
     }
@@ -988,13 +1238,6 @@ public class StreamsMembershipManagerTest {
         membershipManager.poll(time.milliseconds());
         verifyInStateReconciling(membershipManager);
 
-    }
-
-    private void acknowledging() {
-        final StreamsOnTasksAssignedCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnTasksAssignedCallbackNeededEvent) backgroundEventQueue.poll();
-        onAssignmentCallbackNeededEvent.future().complete(null);
-        verifyInStateAcknowledging(membershipManager);
     }
 
     private void acknowledging(final CompletableFuture<Void> future) {
